# parselab

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/component-model/: Cargo.toml
crates/component-model/src/: lib.rs
crates/extractor-client/: Cargo.toml
crates/extractor-client/examples/: ad_hoc_smoke.rs  pass1_smoke.rs  pass2_smoke.rs
crates/extractor-client/src/: ad_hoc.rs  discovery.rs  error.rs  lib.rs  mock.rs  modal.rs  openai.rs  pass2.rs  render.rs  toc.rs
crates/inspector-pane/: Cargo.toml
crates/inspector-pane/src/: inspector_pane.rs
crates/ir/: Cargo.toml
crates/ir/src/: kdl_serde.rs  lib.rs
crates/parselab/: Cargo.toml
crates/parselab/src/: main.rs
crates/pdf-pane/: Cargo.toml
crates/pdf-pane/src/: pdf_pane.rs
data/corpus/: manifest.toml
data/tests/quality/: 2026-05-16-comparison.md
data/tests/quality/glm-ocr-20260516T202438Z/: ao3400a_p01.json  ao3400a_p02.json  ao3400a_p03.json  ao3400a_p04.json  ao3400a_p05.json  coilcraft_xal7030_p01.json  coilcraft_xal7030_p02.json  coilcraft_xal7030_p03.json  coilcraft_xal7030_p04.json  gct_usb4125_p01.json  gct_usb4125_p02.json  gct_usb4125_p03.json  gct_usb4125_p04.json  gct_usb4125_p05.json  gct_usb4125_p06.json  gct_usb4125_p07.json  gct_usb4125_p08.json  gct_usb4125_p09.json  gct_usb4125_p10.json  mmbt3904_p01.json  mmbt3904_p02.json  mmbt3904_p03.json  mmbt3904_p04.json  mmbt3904_p05.json  mmbt3904_p06.json  mmbt3904_p07.json  mmbt3904_p08.json  mmbt3904_p09.json  murata_blm18_p01.json  murata_blm18_p02.json  murata_blm18_p03.json  murata_blm18_p04.json  murata_blm18_p05.json  murata_grm21_p01.json  murata_grm21_p02.json  murata_grm21_p03.json  murata_grm21_p04.json  murata_grm21_p05.json  murata_grm21_p06.json  murata_grm21_p07.json  (+62 more)
data/tests/quality/granite-20260516T202321Z/: ao3400a_p01.json  ao3400a_p02.json  ao3400a_p03.json  ao3400a_p04.json  ao3400a_p05.json  coilcraft_xal7030_p01.json  coilcraft_xal7030_p02.json  coilcraft_xal7030_p03.json  coilcraft_xal7030_p04.json  gct_usb4125_p01.json  gct_usb4125_p02.json  gct_usb4125_p03.json  gct_usb4125_p04.json  gct_usb4125_p05.json  gct_usb4125_p06.json  gct_usb4125_p07.json  gct_usb4125_p08.json  gct_usb4125_p09.json  gct_usb4125_p10.json  mmbt3904_p01.json  mmbt3904_p02.json  mmbt3904_p03.json  mmbt3904_p04.json  mmbt3904_p05.json  mmbt3904_p06.json  mmbt3904_p07.json  mmbt3904_p08.json  mmbt3904_p09.json  murata_blm18_p01.json  murata_blm18_p02.json  murata_blm18_p03.json  murata_blm18_p04.json  murata_blm18_p05.json  murata_grm21_p01.json  murata_grm21_p02.json  murata_grm21_p03.json  murata_grm21_p04.json  murata_grm21_p05.json  murata_grm21_p06.json  murata_grm21_p07.json  (+62 more)
data/tests/quality/granite-20260516T203838Z/: ao3400a_p01.json  ao3400a_p02.json  ao3400a_p03.json  ao3400a_p04.json  ao3400a_p05.json  coilcraft_xal7030_p01.json  coilcraft_xal7030_p02.json  coilcraft_xal7030_p03.json  coilcraft_xal7030_p04.json  gct_usb4125_p01.json  gct_usb4125_p02.json  gct_usb4125_p03.json  gct_usb4125_p04.json  gct_usb4125_p05.json  gct_usb4125_p06.json  gct_usb4125_p07.json  gct_usb4125_p08.json  gct_usb4125_p09.json  gct_usb4125_p10.json  mmbt3904_p01.json  mmbt3904_p02.json  mmbt3904_p03.json  mmbt3904_p04.json  mmbt3904_p05.json  mmbt3904_p06.json  mmbt3904_p07.json  mmbt3904_p08.json  mmbt3904_p09.json  murata_blm18_p01.json  murata_blm18_p02.json  murata_blm18_p03.json  murata_blm18_p04.json  murata_blm18_p05.json  murata_grm21_p01.json  murata_grm21_p02.json  murata_grm21_p03.json  murata_grm21_p04.json  murata_grm21_p05.json  murata_grm21_p06.json  murata_grm21_p07.json  (+62 more)
data/tests/quality/inf2-flash-20260516T202620Z/: ao3400a_p01.json  ao3400a_p02.json  ao3400a_p03.json  ao3400a_p04.json  ao3400a_p05.json  coilcraft_xal7030_p01.json  coilcraft_xal7030_p02.json  coilcraft_xal7030_p03.json  coilcraft_xal7030_p04.json  gct_usb4125_p01.json  gct_usb4125_p02.json  gct_usb4125_p03.json  gct_usb4125_p04.json  gct_usb4125_p05.json  gct_usb4125_p06.json  gct_usb4125_p07.json  gct_usb4125_p08.json  gct_usb4125_p09.json  gct_usb4125_p10.json  mmbt3904_p01.json  mmbt3904_p02.json  mmbt3904_p03.json  mmbt3904_p04.json  mmbt3904_p05.json  mmbt3904_p06.json  mmbt3904_p07.json  mmbt3904_p08.json  mmbt3904_p09.json  murata_blm18_p01.json  murata_blm18_p02.json  murata_blm18_p03.json  murata_blm18_p04.json  murata_blm18_p05.json  murata_grm21_p01.json  murata_grm21_p02.json  murata_grm21_p03.json  murata_grm21_p04.json  murata_grm21_p05.json  murata_grm21_p06.json  murata_grm21_p07.json  (+62 more)
data/tests/quality/inf2-flash-20260516T203020Z/: ao3400a_p01.json  ao3400a_p02.json  ao3400a_p03.json  ao3400a_p04.json  (+98 more)
modal/: .gitignore  README.md  pyproject.toml
modal/docling/: app.py
modal/glm_ocr/: app.py
modal/granite_docling/: app.py
modal/harness/: endpoints.py  remote.py  run_docling.py  run_granite_docling.py
modal/inf2_flash/: app.py
modal/infinity_parser2/: app.py
modal/qwen35_9b/: app.py
modal/qwen36_35b_a3b/: app.py
scripts/: pyproject.toml  run_granite_docling_mlx.py  run_qwen_adjudicator.py  run_tableformer.py
(+1224 files in other folders)
