[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/component-model",
    "crates/extractor-client",
    "crates/inspector-pane",
    "crates/ir",
    "crates/pdf-pane",
]

[workspace.package]
edition = "2021"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
toml = "0.8"
csv = "1"
futures = "0.3"
pdfium-render = { version = "0.8", features = ["thread_safe", "image_latest"] }
image = "0.25"
kdl = "6.3"
sha2 = "0.10"

# Local workspace crates.
ir = { path = "crates/ir" }
extractor-client = { path = "crates/extractor-client" }

# Zed's GPU-accelerated UI framework. Pulled directly from Zed's
# monorepo at a pinned commit; gpui isn't published to crates.io as of
# this writing. If cargo's git-dep resolution trips on the
# workspace-inherited fields inside Zed's Cargo.tomls, fall back to a
# submodule under vendor/zed.
gpui = { git = "https://github.com/zed-industries/zed", rev = "ad3e097279b3a5c04b273a4f2f6c6ed1729ea0c8" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "ad3e097279b3a5c04b273a4f2f6c6ed1729ea0c8" }
