[project]
name = "ferrite-modal"
version = "0.0.0"
description = "Modal workers for the Ferrite PDF extraction pipeline"
requires-python = ">=3.11"
dependencies = [
    "modal>=0.66",
    "pymupdf>=1.24",
    "pillow>=10.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    # FER-126 driver: parses DocTags strings from granite-docling-258M
    # responses into DoclingDocument. Standalone parser, no GPU/pipeline.
    "docling-core>=2.0",
]

[tool.uv]
package = false
